# xournalpp

./: .clang-tidy  CMakeLists.txt
cmake/include/: clang-tidy.cmake
src/: CMakeLists.txt  config.h.in
src/audio/: AudioPlayer.h  AudioRecorder.h  PortAudioConsumer.h  PortAudioProducer.h  VorbisConsumer.h
src/control/: AudioController.h  Control.cpp  Control.h  CrashHandler.cpp  CrashHandlerUnix.h  PageBackgroundChangeController.cpp  XournalMain.cpp
src/control/jobs/: AutosaveJob.cpp  AutosaveJob.h  BaseExportJob.h  BlockingJob.cpp  BlockingJob.h  CustomExportJob.h  Job.cpp  Job.h  PdfExportJob.h  PreviewJob.cpp  PreviewJob.h  RenderJob.cpp  RenderJob.h  SaveJob.cpp  SaveJob.h  Scheduler.cpp  Scheduler.h  XournalScheduler.cpp  XournalScheduler.h
src/control/shaperecognizer/: CircleRecognizer.cpp
src/control/tools/: EditSelection.cpp  StrokeHandler.cpp
src/control/xojfile/: LoadHandler.cpp
src/core/: CMakeLists.txt
src/core/audio/: AudioPlayer.h
src/core/control/: AudioController.h  ClipboardHandler.cpp  ClipboardHandler.h  Control.cpp  Control.h  LatexController.cpp  LatexController.h  PageBackgroundChangeController.cpp  ToolHandler.h  XournalMain.cpp
src/core/control/jobs/: CustomExportJob.cpp  ImageExport.cpp  XournalScheduler.h
src/core/control/settings/: ButtonConfig.h
src/core/control/tools/: EditSelection.cpp  EditSelectionContents.cpp
src/core/gui/: Layout.h  MainWindow.cpp  PageView.cpp  PageViewFindObjectHelper.h  XournalView.cpp
src/core/gui/dialog/: PageTemplateDialog.cpp
src/core/gui/inputdevices/: AbstractInputHandler.h
src/core/gui/sidebar/previews/layer/: SidebarPreviewLayerEntry.cpp
src/core/gui/toolbarMenubar/: ColorToolItem.cpp  ToolMenuHandler.cpp
src/core/model/: SplineSegment.h  StrokeStyle.h  Text.cpp
src/gui/: Layout.cpp  Layout.h  MainWindow.cpp  MainWindow.h  PageView.cpp  XournalMenu.cpp  XournalMenu.h  XournalView.cpp
src/gui/dialog/: SettingsDialog.h
src/gui/inputdevices/: InputContext.cpp  InputEvents.cpp  InputEvents.h  KeyboardInputHandler.cpp  PenInputHandler.cpp  TouchInputHandler.cpp
src/model/: Point.cpp  Point.h  Stroke.cpp  Stroke.h  XojPage.cpp  XojPage.h
src/plugin/: Plugin.cpp
src/util/: CMakeLists.txt  DeviceListHelper.cpp  Path.cpp  Path.h  PathUtil.cpp  Util.cpp
src/util/audio/: VorbisConsumer.cpp
src/view/: StrokeView.cpp
ui/: main.glade  menubar.glade  xournalpp.glade
